[gd_scene load_steps=10 format=3 uid="uid://cvhgybnbwc0e4"]

[ext_resource type="Script" uid="uid://bxtv6l5octf8v" path="res://Scripts/UI/Aerosonar.gd" id="1_5vs2h"]
[ext_resource type="Texture2D" uid="uid://b0qmg8dqfxxyf" path="res://Assets/UIPiecies/Screen/SidePanels/Panel_FullQuality.png" id="1_cx85v"]
[ext_resource type="Script" uid="uid://cvjx6yhssr224" path="res://Scripts/UI/Aerosonal_Line.gd" id="1_u0q8c"]
[ext_resource type="Resource" uid="uid://056ui1umqqh0" path="res://Resources/EventHandlers/ShipControllerEventHandler.tres" id="2_6e8xg"]
[ext_resource type="PackedScene" uid="uid://ckhssy2ej85mq" path="res://Scenes/ScreenUI/AnimatedDroneGas.tscn" id="2_6guy7"]
[ext_resource type="PackedScene" uid="uid://b7cgarcbvixw6" path="res://Scenes/ScreenUI/speaker.tscn" id="6_jiwdy"]
[ext_resource type="Texture2D" uid="uid://kxagwb8gq1pm" path="res://Assets/UIPiecies/Screen/Buttons/Button2_Camera 1_FullQuality.png" id="6_mi4l8"]
[ext_resource type="Texture2D" uid="uid://byy7qb0rfhypw" path="res://Assets/UIPiecies/Screen/Buttons/Button2_Camera 1_FullQuality_Pressed.png" id="7_fw736"]
[ext_resource type="BitMap" uid="uid://1fe3bd6jslqu" path="res://Assets/UIPiecies/Screen/Buttons/ButtonMask_Camera 1_FullQuality.png" id="8_pxgah"]

[node name="Control" type="Control" node_paths=PackedStringArray("LineContainer", "SonalVisual")]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_5vs2h")
ControllerEventH = ExtResource("2_6e8xg")
OffsetAmmount = 10.0
LineContainer = NodePath("TextureRect2/Control")
SonalVisual = NodePath("TextureRect2")

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 1
offset_left = -471.0
offset_top = 57.0
offset_bottom = 221.0
mouse_filter = 0
texture = ExtResource("1_cx85v")
expand_mode = 1

[node name="TextureRect2" type="TextureRect" parent="TextureRect2"]
modulate = Color(0, 0, 0, 0.518)
show_behind_parent = true
layout_mode = 0
offset_left = 9.50004
offset_top = -5.99998
offset_right = 480.5
offset_bottom = 158.0
mouse_filter = 2
texture = ExtResource("1_cx85v")
expand_mode = 1

[node name="Control" type="Control" parent="TextureRect2"]
anchors_preset = 0
offset_left = 264.5
offset_top = 12.0006
offset_right = 459.5
offset_bottom = 57.0006
script = ExtResource("1_u0q8c")
OffsetAmmount = 5.0

[node name="YGas" parent="TextureRect2" instance=ExtResource("2_6guy7")]
position = Vector2(367, 95)
scale = Vector2(0.520363, 0.520363)

[node name="Close" type="TextureButton" parent="TextureRect2" groups=["Buttons"]]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 28.5
offset_top = -39.0
offset_right = 93.5
offset_bottom = -14.0
grow_horizontal = 2
grow_vertical = 0
texture_normal = ExtResource("6_mi4l8")
texture_pressed = ExtResource("7_fw736")
texture_click_mask = ExtResource("8_pxgah")
ignore_texture_size = true
stretch_mode = 0

[node name="Speaker" parent="." instance=ExtResource("6_jiwdy")]
offset_left = -21.0
offset_top = -79.0
offset_right = 19.0
offset_bottom = -39.0
frequency = 15.0
max_rotation = 0.02

[connection signal="RangeChanged" from="TextureRect2/YGas" to="." method="SonarRotationChanged"]
[connection signal="pressed" from="TextureRect2/Close" to="." method="_on_close_pressed"]
[connection signal="Clicked" from="Speaker" to="." method="OnRadioClicked"]
